--- a/smart-watch-kei/package.json
+++ b/smart-watch-kei/package.json
@@ -7,9 +7,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
-    "react-swipeable": "^7.0.2",
     "sass": "^1.83.0",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "use-double-tap": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
