--- a/smart-watch-kei/package.json
+++ b/smart-watch-kei/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.83.0",
     "scss": "^0.2.4",
+    "swiper": "^11.1.15",
     "use-double-tap": "^1.3.6"
   },
   "scripts": {
